[NEW] Add background tracking code.

--- a/ios/Tracking/Info.plist
+++ b/ios/Tracking/Info.plist
@@ -34,9 +34,17 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+<string>We need your location to track your activity.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+<string>We need your location to track your activity.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>We need your location to track your activity even in background.</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
